objects/ssot__LifeScienceDrugDistributionData__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrickName__c</fullName>
        <label>Brick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelType__c</fullName>
        <label>Channel</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Filter01Text__c</fullName>
        <label>Filter01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Filter02Text__c</fullName>
        <label>Filter02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Filter03Text__c</fullName>
        <label>Filter03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Life Sci Drug Distribution Data Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketId__c</fullName>
        <label>Market</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Measure01Period01Number__c</fullName>
        <label>Measure01 Period01</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Measure01Period02Number__c</fullName>
        <label>Measure01 Period02</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Measure01Period03Number__c</fullName>
        <label>Measure01 Period03</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Measure01TotalNumber__c</fullName>
        <label>Measure01 Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Measure02TotalNumber__c</fullName>
        <label>Measure02 Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Measure03TotalNumber__c</fullName>
        <label>Measure03 Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Period01LabelText__c</fullName>
        <label>Period01 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Period02LabelText__c</fullName>
        <label>Period02 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Period03LabelText__c</fullName>
        <label>Period03 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PeriodType__c</fullName>
        <label>Period Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SummaryCapturedDate__c</fullName>
        <label>Summary Captured Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryGeographicAssignmentId__c</fullName>
        <label>Territory Geographic Assignment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TerritoryId__c</fullName>
        <label>Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384195542_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceDrugDistributionData_Mark_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>LifeScienceDrugDistributionData_Mark_rel</relationshipLabel>
        <relationshipName>rel_1747384195542_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384202419_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceDrugDistributionData_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LifeScienceDrugDistributionData_Acco_rel</relationshipLabel>
        <relationshipName>rel_1747384202419_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384208125_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LifeScienceDrugDistributionData_Terr_rel</label>
        <referenceTo>ssot__SalesTerritory__dlm</referenceTo>
        <relationshipLabel>LifeScienceDrugDistributionData_Terr_rel</relationshipLabel>
        <relationshipName>rel_1747384208125_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>